fix bug with notice not wrapping to new row

--- a/src/assets/scss/customizer/controls/_hamburgers.scss
+++ b/src/assets/scss/customizer/controls/_hamburgers.scss
@@ -8,6 +8,7 @@ ul[id^="sub-accordion-section-bgtfw_menu_hamburgers_"] {
 
 	.customize-section-title {
 		display: flex;
+		flex-wrap: wrap;
 
 		.customize-section-back {
 			display: flex;
